--- a/api/package.json
+++ b/api/package.json
@@ -4,11 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn ts-node-dev src/index.ts"
+    "start": "yarn ts-node-dev src/index.ts",
+    "build": "rm -rf dist && tsc -p .",
+    "db:up": "yarn build && knex --knexfile ./dist/knexfile.js migrate:latest",
+    "db:down": "yarn build && knex --knexfile ./dist/knexfile.js migrate:rollback"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
     "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "objection": "^3.0.1",
+    "sqlite3": "^5.1.2",
     "typescript-rest": "^3.0.4"
   },
   "devDependencies": {
