--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,12 @@
     "start": "yarn ts-node-dev src/index.ts",
     "build": "rm -rf dist && tsc -p .",
     "db:up": "yarn build && knex --knexfile ./dist/knexfile.js migrate:latest",
-    "db:down": "yarn build && knex --knexfile ./dist/knexfile.js migrate:rollback"
+    "db:down": "yarn build && knex --knexfile ./dist/knexfile.js migrate:rollback",
+    "db:seed": "yarn build && knex --knexfile ./dist/knexfile.js seed:run"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "objection": "^3.0.1",
@@ -18,6 +20,7 @@
     "typescript-rest": "^3.0.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
