--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.3.0",
