--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "convict": "^6.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.3.0",
@@ -21,6 +22,7 @@
     "typescript-rest": "^3.0.4"
   },
   "devDependencies": {
+    "@types/convict": "^6.1.1",
     "@types/cors": "^2.8.12",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
