--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,3 +13,4 @@ RUN yarn run build
 
 FROM nginx:alpine
 COPY --from=build /client/dist/client /usr/share/nginx/html
+COPY nginx-default.conf /etc/nginx/conf.d/default.conf
