--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,10 @@ services:
 
   api:
     build: ./api
-    expose:
-      - $API_PORT:$API_PORT
     networks:
       - frontend
     environment:
-      PORT: $API_PORT
+      PORT: 3000
 
   client:
     build: ./client
@@ -16,8 +14,6 @@ services:
       - 80:80
     networks:
       - frontend
-    environment:
-      PORT: $CLIENT_PORT
 
 networks:
   frontend:
