--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,11 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn ts-node-dev src/index.ts",
+    "test": "yarn build && knex --knexfile ./dist/spec/knexfile-test.js migrate:latest && jasmine",
     "build": "rm -rf dist && tsc -p .",
-    "db:up": "yarn build && knex --knexfile ./dist/knexfile.js migrate:latest",
-    "db:down": "yarn build && knex --knexfile ./dist/knexfile.js migrate:rollback",
-    "db:seed": "yarn build && knex --knexfile ./dist/knexfile.js seed:run"
+    "db:up": "yarn build && knex --knexfile ./dist/src/knexfile.js migrate:latest",
+    "db:down": "yarn build && knex --knexfile ./dist/src/knexfile.js migrate:rollback",
+    "db:seed": "yarn build && knex --knexfile ./dist/src/knexfile.js seed:run"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
@@ -22,8 +23,13 @@
     "typescript-rest": "^3.0.4"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/convict": "^6.1.1",
     "@types/cors": "^2.8.12",
+    "@types/jasmine": "^4.3.0",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "jasmine": "^4.5.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
